--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,14 @@ code {
 .divData{
   padding: 5%;
 }
+.divMenu{
+  padding: 5%;
+height: 100%;
+border-radius: 12px;
+} 
+.divTable{
+  padding: 5%;
+  text-align: left;
+  font-size: 15px;
+
+}
