--- a/src/componentes/global/css/Header.css
+++ b/src/componentes/global/css/Header.css
@@ -1,8 +1,18 @@
 .Header {
   background-color: red;
-  height: 150px;
+  height: 160px;
   padding: 20px;
   color:white;
   text-align: center;
 }
 
+.Menu{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.Menu li{
+  display: inline-block;
+  padding-right: 18px;
+}
