--- a/src/components/global/css/Content.css
+++ b/src/components/global/css/Content.css
@@ -1,7 +1,7 @@
 .Content {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
+  padding: 5%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
