menu desayuno botones count sumando pedidos

--- a/src/components/global/css/Footer.css
+++ b/src/components/global/css/Footer.css
@@ -1,6 +1,8 @@
 .Footer{
-    margin: 0 auto;
+    background-color: red;
+    height: 50px;
+    padding: 15px;
+    color:white;
     text-align: center;
-    width: 90%;
 }
 
