--- a/src/components/global/css/Content.css
+++ b/src/components/global/css/Content.css
@@ -1,11 +1,22 @@
 .Content {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 75vh;
   padding: 5%;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.sendOrder{
+  font-size: 30px;
+    color: white;
+    
+}
+
+.order{
+  align-content: center;
+  margin-left: 35%;
+  margin-top: 10%;
 }
 
