--- a/src/components/global/css/Header.css
+++ b/src/components/global/css/Header.css
@@ -1,6 +1,6 @@
 .Header {
   background-color: red;
-  height: 100px;
+  height: 90px;
   padding: 15px;
   color:white;
   text-align: center;
@@ -12,7 +12,7 @@
   list-style: none;
 }
 
-.Menu li{
+.Login{
   display: inline-block;
   padding-right: 18px;
 }
