--- a/src/components/global/css/Content.css
+++ b/src/components/global/css/Content.css
@@ -28,7 +28,7 @@
 .menuOrder{
   width: 18%;
   font-size: 25px;
-  color: black;
+  color:white;
   margin-top: 2%;
   margin-left: 18%;
 }
@@ -39,6 +39,7 @@
 
 .addOrder{
   font-size: 25px;
+  color:white;
 }
 
 .divSidedich{
