--- a/src/components/global/css/Button.css
+++ b/src/components/global/css/Button.css
@@ -12,3 +12,33 @@
     height: 50px;
     width: 50px;
 }
+
+.buttonAddSend{
+    background-color:green;
+    font-size: 20px;
+    height: 50px;
+    width: 120px;
+}
+
+.buttonAddFood{
+    background-color:red;
+    font-size: 20px;
+    height: 25px;
+    width: 75px;
+}
+
+.buttonAddAll{
+    background-color:green;
+    font-size: 20px;
+    height: 25px;
+    width: 100px;
+    margin-top: 3%;
+    margin-left: 83%;
+}
+
+.buttonAddDrinks{
+    background-color:red;
+    font-size: 20px;
+    height: 25px;
+    width: 75px;
+}
