--- a/src/components/global/css/BurgerDrinks.css
+++ b/src/components/global/css/BurgerDrinks.css
@@ -19,5 +19,11 @@
 .drinksTypes{
     font-size: 25px;
     display: inline-block; 
-    margin-left: 20%;
+    margin-left: 23%;
+}
+
+.drinksTypesTwo{
+    font-size: 25px;
+    display: inline-block; 
+    margin-left: 24%;
 }
