--- a/src/components/global/css/Footer.css
+++ b/src/components/global/css/Footer.css
@@ -1,7 +1,7 @@
 .Footer{
-    background-color: red;
-    height: 50px;
-    padding: 15px;
+    background: red;
+    height: 100px;
+    padding: 20px;
     color:white;
     text-align: center;
 }
