--- a/src/components/global/css/Button.css
+++ b/src/components/global/css/Button.css
@@ -1,26 +1,25 @@
 .buttonAll{
-    background-color: #f44336;
+    background-color: #ff851b;
     font-size: 20px;
-    height: 150px;
-    width: 150px;
-    margin-left: 21%;
+    height: 200px;
+    width: 200px;
     border-radius: 20px;
 }
 
 .buttonAdd{
-    background-color: white;
+    background-color: #ff851b;
     font-size: 40px;
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 100px;
     color: black;
     border-radius: 12px;
 }
 
 .buttonAddSend{
     background-color:green;
-    font-size: 20px;
-    height: 50px;
-    width: 120px;
+    font-size: 40px;
+    height: 80px;
+    width: 150px;
     color: white;
     border-radius: 12px;
 }
