--- a/src/components/global/css/Header.css
+++ b/src/components/global/css/Header.css
@@ -1,6 +1,6 @@
 .Header {
-  background-color:red;
-  height: 65px;
+  background-color:#ff851b;
+  height: 90px;
   padding: 15px;
   color:white;
   text-align: center;
