--- a/src/components/global/css/Footer.css
+++ b/src/components/global/css/Footer.css
@@ -1,8 +1,11 @@
 .Footer{
     background: #ff851b;
     height: 100px;
-    padding: 20px;
+    padding: 40px;
     color:white;
     text-align: center;
+    margin-top: 95%;
+
 }
+
 
