--- a/src/components/global/css/Button.css
+++ b/src/components/global/css/Button.css
@@ -4,6 +4,14 @@
     height: 200px;
     width: 200px;
     border-radius: 20px;
+   
+}
+
+.buttonEmployed{
+    height: 300px;
+    width: 300px;
+    border-radius: 20px;
+    margin-top: 10%;
 }
 
 .buttonAdd{
@@ -41,6 +49,7 @@
     margin-left: 75%;
     color: white;
     border-radius: 12px;
+    padding: 6%;
 }
 
 .buttonAddDrinks{
