--- a/src/components/global/css/Content.css
+++ b/src/components/global/css/Content.css
@@ -3,7 +3,7 @@
   .Content {
     background-color: #8881814d; 
     min-height: 83vh;
-    padding: 8%;
+    padding: 4%;
     flex-direction: column;
     justify-content: center;
     font-size: calc(10px + 2vmin);
@@ -11,9 +11,85 @@
   }
   .selectFood{
    display: inline-block;
-   margin-left: 16%;
+   margin-left: 5%;
+   margin-top: 30%;
   }
+ 
   .sendOrder{
+    font-size: 30px;
+      color: black;
+      margin-top: 10%;
+  }
+  
+  .order{
+    align-content: center;
+    margin-left: 70%;
+    padding: 5%;
+  }
+  
+  .divTypes{
+    width: 50%;
+    align-content: center;   
+    display: inline-block;   
+  }
+  .menuOrder{
+    width: 18%;
+    font-size: 25px;
+    color:white;
+    margin-top: 2%;
+    margin-left: 18%;
+  }
+  
+  .menuTitle{
+    margin-left: 44%;
+    color: black;
+  }
+  
+
+  .addOrder{
+    font-size: 25px;
+    color:white;
+  }
+  
+  .divSidedich{
+    margin-top: 7%;
+  }
+  .menuTitleBurger{
+    margin-left: 38%;
+    font-size: 35px;
+    color: black;
+  }
+  .menuTitleDrinks{
+    margin-left: 44%;
+    font-size: 35px;
+    margin-top: 5%;
+  }
+
+  .fondBreakfast{
+    background:#eceae887;
+    padding: 3%;
+  }
+
+  .fondLuch{
+    background:#eceae887;
+  }
+}
+
+@media screen and (min-width: 1025px){
+  .Content {
+    background-color: #8881814d; 
+    min-height: 83vh;
+    padding: 8%;
+    flex-direction: column;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+  }
+  .selectFood{
+    display: inline-block;
+    margin-left: 16%;
+   }
+   .sendOrder{
     font-size: 30px;
       color: black;
       margin-top: 10%;
@@ -61,7 +137,6 @@
     font-size: 35px;
     margin-top: 5%;
   }
-
   .fondBreakfast{
     background:#eceae887;
 
@@ -69,67 +144,5 @@
 
   .fondLuch{
     background:#eceae887;
-  }
-}
-
-@media screen and (min-width: 1025px){
-  .Content {
-    background-color: black; 
-    min-height: 80vh;
-    padding: 3%;
-    flex-direction: column;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  .selectFood{
-   display: inline-block;
-   margin-left: 16%;
-  }
-  .sendOrder{
-    font-size: 30px;
-      color: black;
-      margin-top: 10%;
-  }
-  
-  .order{
-    align-content: center;
-    margin-left: 80%;
-    margin-top: 5%;
-  }
-  
-  .divTypes{
-    width: 50%;
-    align-content: center;   
-    display: inline-block;   
-  }
-  .menuOrder{
-    width: 18%;
-    font-size: 25px;
-    color:white;
-    margin-top: 2%;
-    margin-left: 18%;
-  }
-  
-  .menuTitle{
-    margin-left: 44%;
-  }
-  
-  .addOrder{
-    font-size: 25px;
-    color:white;
-  }
-  
-  .divSidedich{
-    margin-top: 7%;
-  }
-  .menuTitleBurger{
-    margin-left: 38%;
-    font-size: 35px;
-  }
-  .menuTitleDrinks{
-    margin-left: 44%;
-    font-size: 35px;
-    margin-top: 5%;
   }
 }
