--- a/src/components/global/css/BurgerDrinks.css
+++ b/src/components/global/css/BurgerDrinks.css
@@ -24,6 +24,7 @@
 .drinksTypesTwo{
     font-size: 30px;
     display: inline-block; 
-    margin-left: 22%;
+    margin-left: 20%;
     margin-top: 5%;
+    color:black;
 }
