--- a/src/components/global/css/BurgerOrder.css
+++ b/src/components/global/css/BurgerOrder.css
@@ -1,7 +1,8 @@
 .burgerTypes{
-    font-size: 20px;
+    font-size: 25px;
     display: inline-block; 
     margin-left: 11%;
+    color: black;
 }
 
 .burgerOptions{
