--- a/src/components/global/css/OrderKitchen.css
+++ b/src/components/global/css/OrderKitchen.css
@@ -1,12 +1,14 @@
 #accordion section ul {
     display: none;
     text-align: center;
+    font-size: 35px;
 }
 
 #accordion section a {
     text-align: center;
     color: black;
     text-decoration: none;
+    font-size: 20px;
 }
 #accordion section a:hover {
     text-decoration: underline;
@@ -18,6 +20,12 @@
 }
 
 .contentOrder{
-    background: #8881814d;
-    height: 750px;
+    background: #f2e4e4a8;
+    height: 800px;
+  
+}
+
+.endOrder{
+    font-size: 150%;
+    margin-left: 38%;
 }
