--- a/src/components/global/css/Content.css
+++ b/src/components/global/css/Content.css
@@ -3,7 +3,7 @@
   .Content {
     background-color: #8881814d; 
     min-height: 75vh;
-    padding: 2%;
+
     flex-direction: column;
     justify-content: center;
     color: white;
@@ -171,4 +171,6 @@
   text-align: center;
   font-size: 60px;
   background: #ff851b;
+  width: 300px;
+  margin-top: 70%;
 }
